<resources>
    <string name="app_name">NetTransmission</string>
    <string name="bt_one">bt_one</string>
    <string name="connect">Connect</string>
    <string name="disconnect">DisConnect</string>
    <string name="button_two">button two</string>
    <string name="net_permission_need">需要网络权限以进行文件传输</string>
    <string name="createfile">CreateFile</string>
    <string name="need_write_permission">需要写权限预创建文件</string>
    <string name="aim_address">请输入目标地址</string>
    <string name="default_url">10.0.2.2:9999</string>
    <string name="receive">接受</string>
    <string name="chooseFile">选择文件</string>
    <string name="ntm">NTM</string>
    <string name="setting">设置</string>
    <string name="exit">退出</string>
    <string name="one">one</string>
    <string name="second">second</string>
    <string name="sub">Sub</string>
    <string name="AllStart">全部开始</string>
    <string name="AllDel">全部清除</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="queue">队列</string>
    <string name="solved">已完成</string>
    <string name="create_task">创建任务</string>
    <string name="ip">ip:</string>
    <string name="input_ip">请输入IP</string>
    <string name="port">port:</string>
    <string name="input_port">请输入端口号</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="get_code">扫码</string>
    <string name="port_no_need">自主选择端口(默认5785)</string>
    <string name="defaultPort">5785</string>
    <string name="gen_code">生成二维🐎</string>
    <string name="loading">加载中...</string>
    <string name="statue">statue</string>
    <string name="resourceAddress">resource address</string>
    <string name="dev_activity">Dev_Activity</string>
    <string name="zero_zero">0/0</string>
</resources>